hero section mobile vr complete

--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
       </nav>
     </header>
     <main>
-      <section class="hero"></section>
+      <section class="hero">
+        <div class="hero__image">
+          <img src="./image/image-intro-mobile.jpg" alt="happy family" />
+        </div>
+        <div class="hero__content">
+          <h1 class="hero__title">Humanizing your insurance.</h1>
+          <p class="hero__body">
+            Get your life insurance coverage easier and faster. We blend our
+            expertise and technology to help you find the plan that’s right for
+            you. Ensure you and your loved ones are protected.
+          </p>
+          <a href="" class="btn btn-light">View plans</a>
+        </div>
+      </section>
       <section class="feature"></section>
       <section class="work"></section>
     </main>
