--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             you. Ensure you and your loved ones are protected.
           </p>
           <a href="" class="btn btn-light">View plans</a>
+          <img src="./image/bg-pattern-intro-right-mobile.svg" alt="pattern" />
         </div>
       </section>
       <section class="feature"></section>
