feature section complete for mobile

--- a/index.html
+++ b/index.html
@@ -40,7 +40,42 @@
           <img src="./image/bg-pattern-intro-right-mobile.svg" alt="pattern" />
         </div>
       </section>
-      <section class="feature"></section>
+      <!--hero :end--->
+      <section class="feature container">
+        <div class="feature__line"></div>
+        <h2 class="feature__title"> We’re different</h2>
+        <div class="feature__cardContainer">
+          <div class="feature__card">
+            <div class="feature__icon">
+              <img src="./image/icon-snappy-process.svg" alt="" >
+            </div>
+            <h3 class="feature__cardTitile">Snappy Process</h3>
+            <p class="feature__cardBody">Our
+              application process can be completed in minutes, not hours. Don’t get stuck
+              filling in tedious forms. </p>
+          </div>
+          <div class="feature__card">
+            <div class="feature__icon">
+              <img src="./image/icon-affordable-prices.svg" alt="" >
+            </div>
+            <h3 class="feature__cardTitile">Affordable Prices</h3>
+            <p class="feature__cardBody">We don’t want you worrying about
+              high monthly costs. Our prices may be low, but we still offer the best
+              coverage possible. </p>
+          </div>
+          <div class="feature__card">
+            <div class="feature__icon">
+              <img src="./image/icon-people-first.svg" alt="" >
+            </div>
+            <h3 class="feature__cardTitile">People First</h3>
+            <p class="feature__cardBody">Our plans aren’t full of conditions and
+              clauses to prevent payouts. We make sure you’re covered when you need it. </p>
+          </div>
+          
+        </div>
+
+      </section>
+    </section>
       <section class="work"></section>
     </main>
     <footer></footer>
