work section complete for mobile

--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
             <p class="feature__cardBody">Our plans aren’t full of conditions and
               clauses to prevent payouts. We make sure you’re covered when you need it. </p>
           </div>
-          
         </div>
-
       </section>
     </section>
-      <section class="work"></section>
+      <section class="work">
+        <h2>Find out more about how we work</h2>
+        <a href="" class="btn btn-light">How we work</a>
+
+      </section>
     </main>
     <footer></footer>
     <script src="/app/js/app.js"></script>
