fixed footer pattern position

--- a/New folder/index.html
+++ b/New folder/index.html
@@ -26,9 +26,9 @@
     </style>
   </head>
   <body>
-    . Find out more about how we work How we work Our company How we work Why
-    Insure? View plans Reviews Help me FAQ Terms of use Privacy policy Cookies
-    Contact Sales Support Live chat Others Careers Press Licenses
+    . Our company How we work Why Insure? View plans Reviews Help me FAQ Terms
+    of use Privacy policy Cookies Contact Sales Support Live chat Others Careers
+    Press Licenses
 
     <div class="attribution">
       Challenge by
