--- a/index.html
+++ b/index.html
@@ -80,7 +80,44 @@
 
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer__container ">
+        <div class="footer__logoSocialContainer">
+          <div class="footer__logoSocial">
+            <div class="footer__logo">
+              <img src="/image/logo.svg" alt="logo">
+            </div>
+            <div class="footer__socialContainer">
+              <img src="/image/icon-facebook.svg" alt="facebook">
+              <img src="/image/icon-twitter.svg" alt="twitter">
+              <img src="/image/icon-pinterest.svg" alt="pinterest">
+              <img src="/image/icon-instagram.svg" alt="instagram">
+            </div>
+
+          </div>
+          
+        </div><!--logoSocial-->
+        <div class="footer__linksContainer">
+          <div class="footer__col">
+            <a href="#" class="grey">Our company </a>
+            <a href="#">How we work</a><a href="#">Why Insure?</a><a href="#">View plans</a><a href="#">Reviews</a>
+          </div>
+          <div class="footer__col">
+            <a href="#" class="grey">Help me</a>
+            <a href="#">FAQ</a><a href="#">Terms
+              of use </a><a href="#">Privacy policy</a><a href="#">Cookies</a>
+          </div>
+          <div class="footer__col">
+            <a href="#" class="grey">Contact</a>
+            <a href="#">Sales</a><a href="#">Support</a><a href="#">Live chat</a>
+          </div>
+          <div class="footer__col">
+            <a href="#" class="grey">Others</a>
+            <a href="#">Careers</a><a href="#">Press</a><a href="#">Licenses</a>
+          </div>
+        </div><!--linksContainer-->
+      </div>
+    </footer>
     <script src="/app/js/app.js"></script>
   </body>
 </html>
