--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </section>
     </section>
-      <section class="work">
+      <section class="work container">
         <h2>Find out more about how we work</h2>
         <a href="" class="btn btn-light">How we work</a>
 
