--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
     </header>
     <main>
       <section class="hero">
+        <img src="/image/bg-pattern-intro-left-desktop.svg" alt="pattern" class="dp-none left-pattern">
+        <div class="container">
         <div class="hero__image">
           <img src="./image/image-intro-mobile.jpg" alt="happy family" />
+          
         </div>
-        <div class="hero__content">
+        <div class="hero__content ">
           <h1 class="hero__title">Humanizing your insurance.</h1>
           <p class="hero__body">
             Get your life insurance coverage easier and faster. We blend our
@@ -39,6 +42,8 @@
           <a href="" class="btn btn-light">View plans</a>
           <img src="./image/bg-pattern-intro-right-mobile.svg" alt="pattern" />
         </div>
+      </div>
+      <img src="/image/bg-pattern-intro-right-desktop.svg" alt="pattern" class="dp-none right-pattern">
       </section>
       <!-- hero :end--->
       <section class="feature container">
