hero section complete for desktop and addjust placement of some footer element

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           
         </div>
         <div class="hero__content ">
+          <div class="hero__line"></div>
           <h1 class="hero__title">Humanizing your insurance.</h1>
           <p class="hero__body">
             Get your life insurance coverage easier and faster. We blend our
