--- a/index.html
+++ b/index.html
@@ -22,8 +22,18 @@
         <div class="nav__burgerMenu">
           <img src="/image/icon-hamburger.svg" alt="hamburger" />
         </div>
+        <div class="nav__close">
+
+          <img src="/image/icon-close.svg" alt="close">
+        </div>
       </nav>
     </header>
+    <div class="dropDown__linksContainer">
+      <a href="#" class="nav-links">How we work</a>
+      <a href="#" class="nav-links">Blog</a>
+      <a href="#" class="nav-links">Account</a>
+      <a href="" class="btn btn-light">View Plans</a>
+    </div>
     <main>
       <section class="hero">
         <img src="/image/bg-pattern-intro-left-desktop.svg" alt="pattern" class="dp-none left-pattern">
